web/cobrands/sass/_base.scss
/* ... */
/*BUTTONS*/

.btn {
  @include button-reset();
}

.btn + .btn {
  // Ensure extra space between inline buttons placed next to each other.
  margin-#{$left}: 0.5em;
}

.btn--primary {
  @include button-variant($button-primary-bg-top, $button-primary-bg-bottom, $button-primary-border, $button-primary-text, $button-primary-hover-bg-top, $button-primary-hover-bg-bottom, $button-primary-hover-border, $button-primary-hover-text,$button-primary-focus-bg-bottom,$button-primary-focus-bg-top, $button-primary-focus-border, $button-primary-focus-text);
}

.btn--danger {
  @include button-variant(#ff0038, #bf002a, #80001c, #fff, #ff0038, #bf002a, #80001c, #fff);
}

.final-submit,
input.final-submit {
  margin: 1em 0.5em;
  float: $right;
}

.btn--facebook {
  @include button-variant(
    #3b5998,
    darken(#3b5998, 10%),
    #3b5998,
    #fff,
    darken(#3b5998, 5%),
    darken(#3b5998, 10%),
    #3b5998,
    #fff
  );

  img {
    margin-#{$right}: 0.5em;
    vertical-align: -0.2em;
    height: 1.3em;
    width: auto;
  }
}

.btn--twitter {
  @include button-variant(
    #55acee,
    darken(#55acee, 10%),
    #55acee,
    #fff,
    darken(#55acee, 5%),
    darken(#55acee, 10%),
    #55acee,
    #fff
  );

  img {
    margin-#{$right}: 0.5em;
    vertical-align: -0.2em;
    height: 1.3em;
    width: auto;
  }
}

.btn--back,
.btn--forward,
.btn--cancel,
.btn--navigate,
.btn--geolocate,
.btn--shortlist,
.btn--shortlisted {
  &:before {
    content: "";
    display: inline-block;
    width: 16px;
    height: 16px;
    background-repeat: no-repeat;
    background-size: 112px 16px;
    background-image: url("/cobrands/fixmystreet/images/button-icons.svg");
    margin-#{$right}: 0.5em;
    vertical-align: -0.1em; // vertically centre icon in button
  }
}

.btn--back {
  &:before {
    background-position: flip(0 0, -16px 0);
  }
}

.btn--forward {
  &:before {
    background-position: flip(-16px 0, 0 0);
  }
}

.btn--cancel {
  &:before {
    background-position: -32px 0;
  }
}

.btn--navigate {
  &:before {
    background-position: -80px 0;
  }
}

.btn--geolocate {
  &:before {
    background-position: -96px 0;
  }
}

.btn--shortlist {
  &:before {
    background-position: -64px 0;
  }
}

.btn--shortlisted {
  &:before {
    background-position: -48px 0;
  }
}

.btn--provide-update {
  display: block;
  width: 100%;
  margin-bottom: 1em;
}

.btn--block {
  display: block;
  // Need to force 100% width if this is applied to <button> or <input> elements
  width: 100%;
  margin-left: 0;
  margin-right: 0;
  box-sizing: border-box;
}

// Don't want space between block-level buttons,
// because they don't sit beside each other anyway.
.btn--block + .btn--block {
  margin-#{$left}: 0;
  margin-top: 1em;
}

.btn--small {
  font-size: 0.8em;
}

.floating-button-spacer {
  &:before {
    content: "";
    display: block;
    height: 2em;
  }
}
.floating-button-wrapper {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    padding-top: 2em;
    overflow: hidden;
}
.floating-button {
    box-shadow: 0 0 2em 2em #fff;
    background-color: #fff;
    padding: 0 1em 1em;
}

.pre-button-messaging {
    margin-bottom: 0.5em;
    background-color: mix(#fff, $primary, 70%);
    overflow: auto;
    max-height: 50vh;
}
// Override box-warning's margin because the floating has its own
.pre-button-messaging .box-warning {
    margin-bottom: 0;
}

.js-floating-button-message {
    padding: 0.5em;
    & > :last-child { margin-bottom: 0; }
}

#js-category-stopper ~ .js-floating-button-message {
    display: none;
}

// Most of our forms get their vertical spacing from the margin-top on labels.
// This means the final submit button can end up uncomfortably close to the
// bottom of the final input. Add a class of `btn--final` to fix this.
.btn--final {
  margin-top: 1.25em; // matches margin-top on `label`
}

/*OTHER*/

.plain-list {
  @include list-reset-soft;
  li {
    margin-bottom: 1em;
  }
}

.item-list {
  margin: 0 0 1em;
  padding: 0;
  border-bottom: 0.25em solid $primary;
}

.item-list__item {
  list-style: none;
  background-color: $itemlist_item_background;
  margin: 0.25em 0 0;
  padding: 0.5em 1em;
  display: block;

  @media print {
    background-color: transparent !important;
    margin: 0 !important;
    padding: 1em 0 !important;
    border-top: 1px solid #ccc;
    page-break-inside: avoid;
  }
}

.item-list__update-wrap {
  @include clearfix;
}

.item-list__update-text p {
  margin-bottom: 0.5em;
}

%item-list--links {
  a {
    color: #222222;
    display: block;
    padding: 0.5em 1em;
  }
  a:hover,
  a:focus,
  &.hovered a {
    background-color: $itemlist_item_background_hover;
    text-decoration: none;
  }
}

.item-list--wards {
  @extend %item-list--links;

  &.govuk-checkboxes--small {
    .govuk-checkboxes__item {
      float: none; // Overrides float:left from govuk-checkboxes--small
      margin-left: 1em; // As otherwise no left margin
    }
  }

  a {
    margin-left: calc(-1em + -34px); // for the padding-left on govuk-checkboxes__item + padding of item-list--wards
    margin-bottom: 0.5rem;
  }
}

.item-list--reports {
  @extend %item-list--links;
}

.item-list--reports__item {
  padding: 0;

  a {
    @include clearfix;
    padding: 0 1em;

    @media print {
      padding: 0;
    }
  }

  .img {
    width: 90px;
    float: $right;
    height: auto;
    margin-#{$left}: 1em;
  }

  small {
    color: #666;
    display: block;
    padding: 0.25em 0;
  }
}

.item-list__item__metadata {
  display: none;

  @media print {
    display: block;
    display: flex;
    flex-wrap: wrap;
  }

  & > * {
    margin-top: 0.5em;
    width: 33%;
    flex: 0 0 auto;
  }

  h4 {
    margin: 0;
    font-size: 0.75em;
    font-weight: bold;
  }

  p {
    margin-bottom: 0;
    min-height: 1.4em;
  }
}
/* ... */

